Add Event Store base on protobuf Add Snapshoting for Aggregate state