@@ -10,7 +10,6 @@ import com.rvr.event.planner.es.protobuf.EventObject.EventRecord;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 
@@ -22,13 +21,16 @@ public enum EventConverterEnum {
         @Override
         Map<String, String> execute(final Event event) {
             CreateNewEvent createNewEvent = (CreateNewEvent) event;
-            return Map.of("member", createNewEvent.getMember());
+            return Map.of("member", createNewEvent.getMember(),
+                    "sequenceNumber", String.valueOf(createNewEvent.getSequenceNumber()));
         }
 
         @Override
         Event convertToDomain(EventRecord eventRecord) {
+            long sequenceNumber = Long.parseLong(eventRecord.getAdditionalParametersOrThrow("sequenceNumber"));
             return new CreateNewEvent(UUID.fromString(eventRecord.getAggregateId()),
-                    eventRecord.getAdditionalParametersOrThrow("member"));
+                    eventRecord.getAdditionalParametersOrThrow("member"),
+                    sequenceNumber);
         }
     },
     MEMBER_OFFER(MemberOfferEvent.class) {
@@ -36,38 +38,45 @@ public enum EventConverterEnum {
         Map<String, String> execute(final Event event) {
             MemberOfferEvent memberOfferEvent = (MemberOfferEvent) event;
             return Map.of("member", memberOfferEvent.getMember(),
-                    "place", memberOfferEvent.getPlace().toString());
+                    "place", memberOfferEvent.getPlace().toString(),
+                    "sequenceNumber", String.valueOf(memberOfferEvent.getSequenceNumber()));
         }
 
         @Override
         Event convertToDomain(EventRecord eventRecord) {
+            long sequenceNumber = Long.parseLong(eventRecord.getAdditionalParametersOrThrow("sequenceNumber"));
             return new MemberOfferEvent(UUID.fromString(eventRecord.getAggregateId()),
                     eventRecord.getAdditionalParametersOrThrow("member"),
-                    Place.valueOf(eventRecord.getAdditionalParametersOrThrow("place")));
+                    Place.valueOf(eventRecord.getAdditionalParametersOrThrow("place")),
+                    sequenceNumber);
         }
     },
     PLANNED(PlannedEvent.class) {
         @Override
         Map<String, String> execute(final Event event) {
             PlannedEvent plannedEvent = (PlannedEvent) event;
-            return Map.of("place", plannedEvent.getPlace().toString());
+            return Map.of("place", plannedEvent.getPlace().toString(),
+                    "sequenceNumber", String.valueOf(plannedEvent.getSequenceNumber()));
         }
 
         @Override
         Event convertToDomain(EventRecord eventRecord) {
+            long sequenceNumber = Long.parseLong(eventRecord.getAdditionalParametersOrThrow("sequenceNumber"));
             return new PlannedEvent(UUID.fromString(eventRecord.getAggregateId()),
-                    Place.valueOf(eventRecord.getAdditionalParametersOrThrow("place")));
+                    Place.valueOf(eventRecord.getAdditionalParametersOrThrow("place")),
+                    sequenceNumber);
         }
     },
     DECLINED(DeclinedEvent.class) {
         @Override
         Map<String, String> execute(final Event event) {
-            return Collections.emptyMap();
+            return Map.of("sequenceNumber", String.valueOf(event.getSequenceNumber()));
         }
 
         @Override
         Event convertToDomain(EventRecord eventRecord) {
-            return new DeclinedEvent(UUID.fromString(eventRecord.getAggregateId()));
+            long sequenceNumber = Long.parseLong(eventRecord.getAdditionalParametersOrThrow("sequenceNumber"));
+            return new DeclinedEvent(UUID.fromString(eventRecord.getAggregateId()), sequenceNumber);
         }
     };
 
